; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_builtin.c_get_bits_per_pixel.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_builtin.c_get_bits_per_pixel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BITSPIXEL = common dso_local global i32 0, align 4
@HORZRES = common dso_local global i32 0, align 4
@VERTRES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i8**)* @get_bits_per_pixel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_bits_per_pixel(i8** %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8** %0, i8*** %4, align 8
  store i8** %1, i8*** %5, align 8
  %8 = call i32 @GetDC(i32* null)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store i32 32, i32* %3, align 4
  br label %28

12:                                               ; preds = %2
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* @BITSPIXEL, align 4
  %15 = call i8* @GetDeviceCaps(i32 %13, i32 %14)
  %16 = ptrtoint i8* %15 to i32
  store i32 %16, i32* %7, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* @HORZRES, align 4
  %19 = call i8* @GetDeviceCaps(i32 %17, i32 %18)
  %20 = load i8**, i8*** %4, align 8
  store i8* %19, i8** %20, align 8
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* @VERTRES, align 4
  %23 = call i8* @GetDeviceCaps(i32 %21, i32 %22)
  %24 = load i8**, i8*** %5, align 8
  store i8* %23, i8** %24, align 8
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @ReleaseDC(i32* null, i32 %25)
  %27 = load i32, i32* %7, align 4
  store i32 %27, i32* %3, align 4
  br label %28

28:                                               ; preds = %12, %11
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @GetDC(i32*) #1

declare dso_local i8* @GetDeviceCaps(i32, i32) #1

declare dso_local i32 @ReleaseDC(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
